--- a/css/layouts/products.css
+++ b/css/layouts/products.css
@@ -266,94 +266,81 @@ footer a {
   }
 }
 
-.owl-carousel {
-  position: relative;
+.bg {
+  background-image: url("../../img/products-heading.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position-x: 80%;
+  height: 400px;
   width: 100%;
+  position: relative;
 }
 
-.owl-carousel .carousel_text {
+.bg .bg_text {
   position: absolute;
   top: 50%;
+  -webkit-transform: translateY(-50%);
+          transform: translateY(-50%);
   left: 0;
   right: 0;
   text-align: center;
-  -webkit-transform: translateY(-50%);
-          transform: translateY(-50%);
 }
 
-.owl-carousel .carousel_text h4 {
-  color: #F33F3F;
-  text-transform: uppercase;
+.bg .bg_text h4 {
   font-size: 22px;
+  color: #F33F3F;
 }
 
-.owl-carousel .carousel_text h1 {
-  font-size: 60px;
-  margin-top: -15px;
+.bg .bg_text h1 {
+  font-size: 50px;
   color: #fff;
-  text-transform: uppercase;
-  font-weight: 500;
   letter-spacing: 8px;
+  margin-top: -15px;
 }
 
-.owl-carousel .owl-dots {
-  position: absolute;
-  bottom: 20px;
-  width: 100%;
-  text-align: center;
-}
-
-.owl-carousel .owl-dots button.owl-dot {
-  width: 20px;
-  margin: 0 5px;
-}
-
-.owl-carousel .owl-dots button.owl-dot span {
-  width: 10px;
-  height: 10px;
-  background: rgba(255, 255, 255, 0.5);
-  border-radius: 50%;
-}
-
-.owl-carousel .owl-dots button.owl-dot:focus {
-  outline: 0;
-}
-
-.owl-carousel .owl-dots button.owl-dot.active span {
-  background: white;
-}
-
-.block_title {
-  border-bottom: 1px solid #EEEEEE;
+.filter_title {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  border-bottom: 1px solid #EEEEEE;
 }
 
-.block_title h3 {
-  font-weight: 400;
-  font-size: 28px;
+.filter_title button {
+  border: none;
+  background: transparent;
+  color: #000;
+  border-radius: 0;
+  cursor: pointer;
+  text-transform: uppercase;
+  font-weight: 700;
+  font-family: 'Poppins', sans-serif !important;
+  -webkit-transition: .5s ease;
+  transition: .5s ease;
+  margin: 0 12px;
 }
 
-.block_title a {
-  font-size: 13px;
+.filter_title button:hover {
   color: #F33F3F;
-  text-decoration: none;
-  font-weight: 700;
 }
 
-.block_title a i {
-  font-size: 10px;
-  font-weight: 700;
+.filter_title button:focus {
+  outline: 0;
+}
+
+.filter_title button.active {
+  color: #F33F3F;
 }
 
 .products {
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  position: relative;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -375,11 +362,13 @@ footer a {
 }
 
 .products .product {
+  -webkit-box-flex: 1;
+      -ms-flex: 1 1 30%;
+          flex: 1 1 30%;
+  margin: 15px 15px;
+  -webkit-transition: .2s ease;
+  transition: .2s ease;
   border: 1px solid #EEEEEE;
-}
-
-.products .product:nth-child(2) {
-  margin: 0 30px;
 }
 
 .products .product .product_title {
@@ -425,199 +414,66 @@ footer a {
   color: #F33F3F;
 }
 
-.about_info {
+.active_filter {
+  opacity: 1;
+  position: static;
+  -webkit-transition: .2s ease;
+  transition: .2s ease;
+  z-index: 2;
+}
+
+.disabled_item {
+  -webkit-transition: .2s ease;
+  transition: .2s ease;
+  opacity: 0;
+  position: absolute;
+  left: -1000%;
+  top: 0;
+  z-index: -1;
+}
+
+.pagination {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  margin: 40px 0;
 }
 
-.about_info img {
-  width: 100%;
-}
-
-.about_info .info a {
-  text-decoration: none;
-}
-
-.about_info .info .title {
-  color: #1A6692;
-  font-weight: 500;
-  font-size: 18px;
-}
-
-.about_info .info p {
-  color: #7E7E7E;
-  font-size: 14px;
-  margin: 25px 0;
-}
-
-.about_info .info p a {
-  color: #1B89FF;
-}
-
-.about_info .info ul {
-  list-style: none;
-  margin: 15px 0;
-}
-
-.about_info .info ul li {
-  margin: 15px 0;
-}
-
-.about_info .info ul li a {
-  color: #7E7E7E;
-  font-size: 15px;
+.pagination .page {
+  margin: 0 15px;
+  border: 1px solid #EEEEEE;
+  width: 40px;
+  height: 40px;
+  line-height: 40px;
   -webkit-transition: .5s ease;
   transition: .5s ease;
-}
-
-.about_info .info ul li a:hover {
-  color: #F33F3F;
-}
-
-.about_info .info ul li a:hover:before {
-  background: #F33F3F;
-}
-
-.about_info .info ul li a:before {
-  -webkit-transition: .5s ease;
-  transition: .5s ease;
-  content: '';
-  width: 5px;
-  height: 5px;
-  background: #232323;
-  display: inline-block;
-  margin-right: 10px;
-}
-
-.about_info .info .read {
-  border: none;
-  background: #F33F3F;
-  color: #fff;
-  border-radius: 5px;
   cursor: pointer;
-  padding: 10px 15px;
-  margin-top: 20px;
-  font-size: 15px;
-  font-weight: 400;
-  display: inline-block;
-  -webkit-transition: .5s ease;
-  transition: .5s ease;
 }
 
-.about_info .info .read:hover {
-  background: #232323;
-  color: #fff;
+.pagination .page span {
+  font-weight: 700;
+  width: 40px;
+  text-align: center;
 }
 
-.purchase {
-  background: #F7F7F7;
-  padding: 20px;
-  margin: 80px 0;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  -webkit-box-align: end;
-      -ms-flex-align: end;
-          align-items: flex-end;
-  border-radius: 3px;
-}
-
-.purchase .title {
-  color: #1A6692;
-  font-size: 18px;
-}
-
-.purchase p {
-  color: #7E7E7E;
-  font-size: 14px;
-}
-
-.purchase a {
-  border: none;
+.pagination .page:hover {
   background: #F33F3F;
   color: #fff;
-  border-radius: 5px;
-  cursor: pointer;
-  padding: 10px 15px;
-  margin-top: 20px;
-  font-size: 15px;
-  font-weight: 400;
-  display: inline-block;
-  -webkit-transition: .5s ease;
-  transition: .5s ease;
-  text-decoration: none;
 }
 
-.purchase a:hover {
-  background: #232323;
+.pagination .active {
+  background: #F33F3F;
   color: #fff;
 }
 
-@media screen and (max-width: 768px) {
-  .owl-carousel .carousel_text h4 {
-    font-size: 20px;
-  }
-  .owl-carousel .carousel_text h1 {
-    font-size: 40px;
-    letter-spacing: 5px;
-  }
-  .purchase {
-    -ms-flex-wrap: wrap;
-        flex-wrap: wrap;
-  }
-  .purchase a {
-    width: 100%;
-    text-align: center;
-  }
-}
-
-@media screen and (max-width: 590px) {
-  .owl-carousel .carousel_text h4 {
-    font-size: 20px;
-  }
-  .owl-carousel .carousel_text h1 {
-    font-size: 30px;
-    letter-spacing: 5px;
-  }
-  .block_title {
-    -ms-flex-wrap: wrap;
-        flex-wrap: wrap;
-  }
-  .products .product .product_title {
-    -ms-flex-wrap: wrap;
-        flex-wrap: wrap;
-  }
-  .products .product .product_raiting {
-    -ms-flex-wrap: wrap;
-        flex-wrap: wrap;
-  }
-  footer {
-    font-size: 17px;
-  }
-}
-
-@media screen and (max-width: 320px) {
-  .owl-carousel .carousel_text h4 {
-    font-size: 18px;
-    -webkit-margin-before: 1em;
-            margin-block-start: 1em;
-    -webkit-margin-after: 1em;
-            margin-block-end: 1em;
-  }
-  .owl-carousel .carousel_text h1 {
-    font-size: 20px;
-    letter-spacing: 3px;
-  }
+footer {
+  border-top: 1px solid #EEEEEE;
 }
 
 @media screen and (max-width: 992px) {
@@ -626,20 +482,9 @@ footer a {
         flex-wrap: wrap;
   }
   .products .product {
-    margin: 20px 0;
-  }
-  .products .product:nth-child(2) {
-    margin: 0;
-  }
-  .about_info {
-    -ms-flex-wrap: wrap;
-        flex-wrap: wrap;
-  }
-  .about_info .info {
-    margin-bottom: 20px;
-  }
-  .purchase p {
-    max-width: 500px;
+    -webkit-box-flex: 1;
+        -ms-flex: 1 1 100%;
+            flex: 1 1 100%;
   }
 }
-/*# sourceMappingURL=home.css.map */
+/*# sourceMappingURL=products.css.map */
