--- a/css/layouts/nav.css
+++ b/css/layouts/nav.css
@@ -1,10 +1,11 @@
+@import url("https://fonts.googleapis.com/css?family=Poppins&display=swap");
 body {
   margin: 0;
   padding: 0;
   font-family: 'Poppins', sans-serif;
 }
 
-section:not(#carousel) {
+section:not(.nopad) {
   padding-top: 60px;
 }
 
@@ -52,6 +53,8 @@ header {
   background: #232323;
   min-height: 80px;
   width: 100%;
+  position: absolute;
+  top: 0;
   -webkit-transition: .5s ease;
   transition: .5s ease;
 }
@@ -144,9 +147,6 @@ header.stick {
   -webkit-transition: .5s ease;
   transition: .5s ease;
   position: fixed;
-  top: 0;
-  right: 0;
-  left: 0;
 }
 
 header.stick h2 {
