--- a/css/layouts/about.css
+++ b/css/layouts/about.css
@@ -611,4 +611,22 @@ footer a {
             flex: 1 1 100%;
   }
 }
+
+@media screen and (max-width: 350px) {
+  .bg .bg_text h4 {
+    font-size: 18px;
+  }
+  .bg .bg_text h1 {
+    font-size: 35px;
+  }
+}
+
+@media screen and (max-width: 250px) {
+  .bg .bg_text h4 {
+    font-size: 15px;
+  }
+  .bg .bg_text h1 {
+    font-size: 28px;
+  }
+}
 /*# sourceMappingURL=about.css.map */
