--- a/css/layouts/home.css
+++ b/css/layouts/home.css
@@ -323,6 +323,38 @@ footer a {
   background: white;
 }
 
+.owl-carousel .owl-nav {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
+.owl-carousel .owl-nav button {
+  position: absolute;
+  height: 100%;
+  width: 5%;
+  cursor: pointer;
+}
+
+.owl-carousel .owl-nav button span {
+  font-size: 60px;
+  color: #fff;
+}
+
+.owl-carousel .owl-nav button.owl-prev {
+  left: 0;
+  background: -webkit-gradient(linear, left top, right top, from(rgba(0, 0, 0, 0.3)), to(rgba(0, 0, 0, 0.5)));
+  background: linear-gradient(to right, rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.5));
+}
+
+.owl-carousel .owl-nav button.owl-next {
+  right: 0;
+  background: -webkit-gradient(linear, right top, left top, from(rgba(0, 0, 0, 0.3)), to(rgba(0, 0, 0, 0.5)));
+  background: linear-gradient(to left, rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.5));
+}
+
 .block_title {
   border-bottom: 1px solid #EEEEEE;
   display: -webkit-box;
@@ -568,7 +600,7 @@ footer a {
     font-size: 20px;
   }
   .owl-carousel .carousel_text h1 {
-    font-size: 40px;
+    font-size: 35px;
     letter-spacing: 5px;
   }
   .purchase {
@@ -606,7 +638,7 @@ footer a {
   }
 }
 
-@media screen and (max-width: 320px) {
+@media screen and (max-width: 360px) {
   .owl-carousel .carousel_text h4 {
     font-size: 18px;
     -webkit-margin-before: 1em;
@@ -617,6 +649,9 @@ footer a {
   .owl-carousel .carousel_text h1 {
     font-size: 20px;
     letter-spacing: 3px;
+  }
+  .owl-carousel .owl-nav button span {
+    font-size: 40px;
   }
 }
 
