--- a/css/layouts/home.scss
+++ b/css/layouts/home.scss
@@ -47,6 +47,31 @@
       }
     }
   }
+  .owl-nav{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    button{
+      position: absolute;
+      height: 100%;
+      width: 5%;
+      cursor: pointer;
+      span{
+        font-size: 60px;
+        color: #fff;
+      }
+    }
+    button.owl-prev{
+      left: 0;
+      background: linear-gradient(to right, rgba(0,0,0,0.3), rgba(0,0,0,0.5));
+    }
+    button.owl-next{
+      right: 0;
+      background: linear-gradient(to left, rgba(0,0,0,0.3), rgba(0,0,0,0.5));
+    }
+  }
 }
 .block_title{
   border-bottom: 1px solid #EEEEEE;
@@ -210,7 +235,7 @@
         font-size: 20px;
       }
       h1{
-        font-size: 40px;
+        font-size: 35px;
         letter-spacing: 5px;
       }
     }
@@ -255,7 +280,7 @@
 }
 
 
-@media screen and (max-width: 320px){
+@media screen and (max-width: 360px){
   .owl-carousel{
     .carousel_text{
       h4{
@@ -266,6 +291,13 @@
       h1{
         font-size: 20px;
         letter-spacing: 3px;
+      }
+    }
+    .owl-nav{
+      button{
+        span{
+          font-size: 40px;
+        }
       }
     }
   }
